# alevin-fry

./: .gitignore  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.cs_orig  LICENSE  README.md  bump_and_publish.sh  dist-workspace.toml  read_before_you_start  release-please-config.json  run_alevinfry.sh  spliced_unspliced_txome_builder.R
.cargo/: config-portable.toml  config.toml
.github/: build-setup.yml
.github/workflows/: release-please.yml  release.yml  rust.yml  sanitize-cargo.yml
docs/: collation-trait-refactor.md  requirements.txt
docs/source/: LICENSE.rst  atac.rst  building.rst  collate.rst  commands.rst  conf.py  generate_permit_list.rst  getting_started.rst  index.rst  infer.rst  installing.rst  other_resources.rst  overview.rst  quant.rst
libradicl/: CHANGELOG.md  Cargo.toml  README.md
libradicl/src/: analyze_pug.rs  bulkrad.rs  cellfilter.rs  collate.rs  convert.rs  diff.rs  em.rs  exit_codes.rs  infer.rs  lib.rs  pugutils.rs  quant.rs  rad_types.rs  schema.rs  utils.rs
scripts/: reheader.sh
scripts/testing/: compare_counts.py
src/: cellfilter.rs  cellfilter2.rs  cmd_parse_utils.rs  collate.rs  constants.rs  convert.rs  deduplicate.rs  diagnostics.rs  em.rs  eq_class.rs  forseti.rs  graph_dump.rs  infer.rs  io_utils.rs  knee_finding.rs  lib.rs  main.rs  mlp_spline.rs  multinomial.rs  prog_opts.rs  pugutils.rs  pugutils_dp.rs  pugutils_dp_new.rs  quant.rs  sort.rs  test_dp  umi_general_distance.rs  utils.rs
src/atac/: cellfilter.rs  collate.rs  deduplicate.rs  mod.rs  prog_opts.rs  run.rs  sort.rs  utils.rs
tests/: multi_barcode_integration.rs
