[package]
authors = [
  "Avi Srivastava <asrivastava@wistar.org>",
  "Hirak Sarkar <hiraksarkar.cs@gmail.com>",
  "Dongze He <dhe17@umd.edu>.zakeri@gmail.com>",
  "Noor Pratap Singh <npsingh@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
name = "alevin-fry"
version = "0.11.1"
edition = "2021"
description = "A suite of tools for the rapid, accurate and memory-frugal processing single-cell and single-nucleus sequencing data."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/alevin-fry"
homepage = "https://github.com/COMBINE-lab/alevin-fry"
documentation = "https://alevin-fry.readthedocs.io/en/latest/"
include = [
  "/src/*.rs",
  "/src/atac/*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "ATAC-seq",
  "single-nucleus",
]
categories = ["command-line-utilities", "science"]

[dependencies]
# for local development, look in the libradicl git repository
# but when published, pull the specified version
#libradicl = { git = "https://github.com/COMBINE-lab/libradicl", branch = "develop", version = "0.10.0" }
libradicl = { version = "0.10.0" }
anyhow = "1.0.95"
arrayvec = "0.7.6"
ahash = "0.8.11"
bincode = "1.3.3"
bstr = "1.11.1"
crossbeam-channel = "0.5.14"
crossbeam-queue = "0.3.12"
typed-builder = "0.20.0"
indicatif = "0.17.9"
needletail = "0.6.1"
petgraph = "0.6.5"
libdeflater = "1.23.0"
flate2 = { version = "1.1.0" }
scroll = "0.12.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sprs = "0.11.2"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
smallvec = "1.13.2"
snap = "1.1.1"
rand = "0.8.5"
chrono = "0.4.39"
csv = "1.3.1"
mimalloc = { version = "0.1.43", default-features = false }
num-format = "0.4.4"
num_cpus = "1.16.0"
bio-types = { version = "1.0.4", default-features = true, features = ["serde"] }
itertools = "0.14.0"
thiserror = "2.0.9"
statrs = "0.18.0"
#sce = { git = "https://github.com/parazodiac/SingleCellExperiment", branch = "dev", version = "0.2.0" }
sce = { version = "0.2.0" }
# no shenanigans; clap makes breaking "fixes" too often to allow variability
# in the version different from what we tested with
clap = { version = "4.5.23", features = [
  "derive",
  "wrap_help",
  "cargo",
  "help",
  "usage",
  "string",
  "error-context",
] }

noodles = { version = "0.85.0", features = ["bam", "bgzf", "sam"] }
dashmap = { version = "6.1.0", features = ["serde", "inline"] }
nalgebra = "0.33.2"
niffler = { version = "2.6.0", default-features = false, features = [
  "gz",
  "gz_cloudflare_zlib",
] }

[profile.release]
#debug = true
lto = "thin"
#codegen-units=1
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.25.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
