[package]
authors = [
  "Avi Srivastava <asrivastava@wistar.org>",
  "Hirak Sarkar <hiraksarkar.cs@gmail.com>",
  "Dongze He <dhe17@umd.edu>.zakeri@gmail.com>",
  "Noor Pratap Singh <npsingh@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
name = "alevin-fry"
version = "0.13.0"
edition = "2024"

description = "A suite of tools for the rapid, accurate and memory-frugal processing single-cell and single-nucleus sequencing data."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/alevin-fry"
homepage = "https://github.com/COMBINE-lab/alevin-fry"
documentation = "https://alevin-fry.readthedocs.io/en/latest/"
include = [
  "/src/*.rs",
  "/src/atac/*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "ATAC-seq",
  "single-nucleus",
]
categories = ["command-line-utilities", "science"]

[dependencies]
libradicl = { version = "0.13" }
anyhow = "1.0.102"
arrayvec = "0.7.6"
ahash = "0.8.12"
bincode = "1.3.3"
bstr = "1.12.1"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
typed-builder = "0.23.2"
indicatif = "0.18.4"
needletail = "0.6.3"
petgraph = "0.8.3"
libdeflater = "1.25.2"
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-ng"] }
scroll = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sprs = "0.11.4"
slog = "2.8.2"
slog-term = "2.9.2"
slog-async = "2.8.0"
smallvec = "1.15.1"
snap = "1.1.1"
rand = { version = "0.10" }
chrono = "0.4.44"
csv = "1.4.0"
mimalloc = { version = "0.1.48", default-features = false }
num-format = "0.4.4"
num_cpus = "1.17.0"
bio-types = { version = "1.0.4", default-features = true, features = ["serde"] }
itertools = "0.14.0"
thiserror = "2.0.18"
# no shenanigans; clap makes breaking "fixes" too often to allow variability
# in the version different from what we tested with
clap = { version = "4.6.0", features = [
  "derive",
  "wrap_help",
  "cargo",
  "help",
  "usage",
  "string",
  "error-context",
] }

noodles = { version = "0.108.0", features = ["bam", "bgzf", "sam"] }
dashmap = { version = "6.1.0", features = ["serde", "inline"] }
rand_distr = "0.6"

[dev-dependencies]
tempfile = "3"
slog-term = "2.9.2"

[profile.release]
#debug = true
lto = "thin"
#codegen-units=1
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
