[package]
name = "libradicl"
version = "0.4.2"
authors = ["Avi Srivastava <avi.srivastava@nyu.edu>", "Hirak Sarkar <hirak_sarkar@hms.harvard.edu>", "Dongze He <dhe17@umd.edu>", "Mohsen Zakeri <mzakeri@cs.umd.edu>", "Rob Patro <rob@cs.umd.edu>"]
edition = "2018"
description = "support library for alevin-fry"
license-file = "LICENSE"
readme= "README.md"
repository = "https://github.com/COMBINE-lab/alevin-fry"
homepage = "https://github.com/COMBINE-lab/alevin-fry"
documentation = "https://alevin-fry.readthedocs.io/en/latest/"
include = [
    "src/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]
keywords = ["single-cell", "preprocessing", 
	    "RNA-seq", "single-nucleus", "RNA-velocity"]
categories = ["command-line-utilities", "science"]

[dependencies]
arrayvec = "0.7.1"
snap = "1"
scroll = "0.10.2"
num = "0.4.0"
ahash = "0.7.4"
slog = "2.7.0"
bstr = "0.2.16"
slog-term = "2.8.0"
slog-async = "2.6.0"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
csv = "1.1.6"
dashmap = "^4.0.2"
indicatif = "0.16.2"
itertools = "0.10.1"
crossbeam-channel = "0.5.1"
crossbeam-queue = "0.3.2"
petgraph = "0.6.0"
executors = "0.9"
bio-types = "0.12.0"
quickersort = "3.0.1"
needletail = "0.4.1"
num-format = "0.4.0"
statrs = "0.15.0" 
rand = "0.8.4"
flate2 = "1.0.16"
smallvec = "1.6.1"
serde_json = "1.0.59"
sprs = "0.10.0"
rust-htslib = { version = "0.38.2", default-features = false, features = ["bzip2", "lzma"] }
sce = { git = "https://github.com/parazodiac/SingleCellExperiment", version = "0.1.1" }