[package]
name = "libradicl"
version = "0.1.0"
authors = [
  "Avi Srivastava <avi.srivastava@nyu.edu>",
  "Hirak Sarkar <hirak_sarkar@hms.harvard.edu>",
  "Dongze He <dhe17@umd.edu>",
  "Mohsen Zakeri <mzakeri@cs.umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
edition = "2021"
description = "support library for alevin-fry"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/alevin-fry"
homepage = "https://github.com/COMBINE-lab/alevin-fry"
documentation = "https://alevin-fry.readthedocs.io/en/latest/"
include = ["src/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
  "single-nucleus",
  "RNA-velocity",
]
categories = ["command-line-utilities", "science"]

[dependencies]
snap = "1"
scroll = "0.11.0"
num = "0.4.0"
ahash = "0.7.6"
serde = { version = "1.0.136", features = ["derive"] }
dashmap = "^5.1.0"
bio-types = "0.12.1"
smallvec = "1.8.0"
rust-htslib = { version = "0.39.5", default-features = false, features = [
  "bzip2",
  "lzma",
] }
